--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style_home.css" />
+    <link rel="stylesheet" href="responsive_home.css" />
     <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon" />
     <title>happiness</title>
   </head>
