--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <link rel="stylesheet" href="style_home.css" />
     <link rel="stylesheet" href="responsive_home.css" />
     <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon" />
